--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,21 @@ pandas == 2.1.3
 plotly == 5.18.0
 dash == 2.14.2
 gunicorn == 21.2.0
+
+Brotli==1.0.7
+click==7.1.2
+dash-core-components==1.10.0
+dash-html-components==1.0.3
+dash-renderer==1.4.1
+dash-table==4.7.0
+Flask==2.3.2
+Flask-Compress==1.5.0
+MarkupSafe==1.1.1
+numpy==1.22.0
+pandas==1.0.0
+plotly==4.8.0
+python-dateutil==2.8.1
+pytz==2020.1
+retrying==1.3.3
+six==1.15.0
+Werkzeug>=2.2.3
